--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 					<password>${password}</password>
 					<environment>Sandbox</environment>
 					<application>target/americanflights-api-1.0.0-SNAPSHOT.zip</application>
+					<applicationName>americanflights-api</applicationName>
 				</configuration>
 				<executions>
 					<execution>
